crates/agglayer-grpc-types/src/compat/v1/snapshots/agglayer_grpc_types__compat__v1__tests__failed_deser__debug.snap
---
source: crates/agglayer-grpc-types/src/compat/v1/tests.rs
expression: "format!(\"{:?}\", anyhow::Error::from(error))"
---
failed to deserialize proof

Caused by:
    failed
