crates/agglayer-grpc-types/src/compat/v1/snapshots/agglayer_grpc_types__compat__v1__tests__failed_deser__display.snap
---
source: crates/agglayer-grpc-types/src/compat/v1/tests.rs
expression: error
---
failed to deserialize proof
